# WordsOfInterest

./: .gitignore  README.md  pyproject.toml
woi/: manage.py
woi/core/: admin.py  builtin_extensions.py  feeds.py  forms.py  md_extensions.py  models.py  processors.py  urls.py  utils.py  views.py
woi/core/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
woi/core/management/commands/: woi_run_first.py
woi/core/migrations/: 0001_initial.py  0002_alter_post_status.py  0003_alter_post_html.py  0004_alter_post_tags.py  0005_alter_post_tags.py  0006_post_image_alter_post_author.py  0007_alter_post_options_postimage.py  0008_alter_post_options.py  0009_alter_post_options.py  0010_alter_comment_email.py  0011_extension.py  0012_alter_extension_name.py  0013_alter_extension_options.py  0014_rename_callable_function_extension_callable.py  0015_extension_html_id.py  0016_remove_extension_html_id.py  0017_post_views.py  0018_extension_login_required.py  0019_extension_js_file.py  0020_post_comments_allowed.py  0021_remove_post_views_view.py  0022_siteinfo.py  0023_alter_siteinfo_fa_icon.py  0024_alter_siteinfo_options.py  0025_alter_postimage_post.py  0026_post_internal.py  0027_remove_post_internal.py  0028_post_views_alter_post_updated_delete_view.py
woi/core/static/3rd/js/: highlight.min.js
woi/core/templates/core/: article.html  article.inc.html  base.html  comments.html  edit_article.html  ganalytics.html  index.html  info.html
woi/core/templatetags/: woi_tags.py
woi/woi/: asgi.py  env_helper.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
