[tool.poetry]
name = "woi"
version = "0.1.0"
description = "Words-Of-Interest (blog application)."
authors = ["Whitie <weimann.th@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
Markdown = "^3.3.6"
Pillow = "^8.4.0"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
